Refactor InvokeOperationHandlers